data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4350.wast
;; 9. Test Description 9: Implement a `call_indirect` designed to call a valid function but deliberately avoid correct operand stack preparation. Follow this with a `br_if` condition that negates expectations to check stack underflow handling.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table funcref (elem))
    (func $test 
      (i32.const 1) 
      (call_indirect (type 0) (i32.const 0)) 
      (br_if 0 (i32.const 0))
    )
  )
  "type mismatch"
)